<resources>
    <string name="app_name">Countdown</string>
    <string name="text_yrs3">YRS</string>
    <string name="text_day3">DAY</string>
    <string name="text_hrs3">HRS</string>
    <string name="text_min3">MIN</string>
    <string name="text_sec3">SEC</string>
    <string name="enter_your_information">Enter Your Information</string>
    <string name="enter_name">Name and Surname</string>
    <string name="enter_birthday">Birthday</string>
    <string name="enter_place_of_birth">Place of Birth</string>
    <string name="enterAllData">Enter all data</string>
    <string name="ifSomethingDoesNotSuitYouDeleteTheApplication">If something does not suit you, delete the application!</string>
    <string name="question">Do you accept your fate?</string>
    <string name="key_yes">Yes</string>
    <string name="key_no">No</string>
    <string name="key_cancel">Cancel</string>
    <string name="key_accept">Accept</string>
    <string name="countdown_is_ready">Your countdown is ready.</string>
    <string name="i_have_read_user_agreement">I have read the user agreement and accept the terms and conditions.</string>
    <string name="read_phone_state_text">For the application to work, go to the settings, find this application and provide the \"Phone\"
        permission in the \"Application Permissions\" section.
    </string>
    <string name="understand">ОК</string>
    <string name="text_day2">DAY</string>
    <string name="text_day1">DAY</string>
    <string name="text_hrs2">HRS</string>
    <string name="text_hrs1">HRS</string>
    <string name="text_min2">MIN</string>
    <string name="text_min1">MIN</string>
    <string name="text_sec2">SEC</string>
    <string name="text_sec1">SEC</string>
    <string name="text_yrs2">YRS</string>
    <string name="text_yrs1">YRS</string>

    <string name="sign_out">Sign Out of your account</string>
    <string name="type_message">Type message…</string>
    <string name="change_your_fate">Change your fate</string>
    <string name="new_message_after">New message after</string>
    <string name="seconds">seconds</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="do_you_want_change_your_fate">Do you want change your fate?</string>
    <string name="also_disable_ads">Also disable ads…</string>
    <string name="disable_ads">Disable ads</string>
    <string name="general_chat">General chat</string>
    <string name="chat">Chat</string>
    <string name="share_date_of_death">Share date of death</string>
    <string name="chat_language">Chat language</string>
    <string name="one_message_deleted">Message deleted</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete message</string>
    <string name="edit">Edit message</string>

    <string name="cross_text_1">+LICENSE++++++++++++++++++++++++++</string>
    <string name="cross_text_2">+DISTRIBUTION+++++++++++++++++++++</string>
    <string name="cross_text_3">+USER AGREEMENT++++++++++++++++++</string>
    <string name="cross_text_4">++Use+++++++++++++++++++++++++++++</string>
    <string name="cross_text_5">++Use Restrictions+++++++++++++++++++</string>
    <string name="cross_text_6">++Copyright Restriction++++++++++++++</string>
    <string name="cross_text_7">++Limitation of Responsibility++++++++++</string>

    <string name="countdown_copyright">Countdown Copyright © Countdown Fate Systems, LLC IMPORTANT:
        PLEASE READ THIS LICENSE CAREFULLY BEFORE USING THIS SOFTWARE.
    </string>

    <string name="countdown_text_1">User shall use the application strictly in accordance with the related agreements.
        By receiving, opening the file package, and/or using Countdown("Software") containing this software, you agree that this End User
        User License Agreement(EULA) is a legally binding and valid contract and agree to be bound by it.
        You agree to abide by the intellectual property laws and all of the terms and conditions of this Agreement.
        User shall accept the terms of his or her fate. Any attempt to use information derived from Countdown to alter the user\'s fate will result in a
        breach of this agreement. Unless you have a different license agreement signed by Countdown Fate Systems, LLC your use of Countdown indicates
        your acceptance of this license agreement and warranty. Subject to the terms of this Agreement, Countdown Fate Systems, LLC grants to you a limited,
        non-exclusive, non-transferable license, without right to sub-license, to use Countdown in accordance with this Agreement and any other written
        agreement with Countdown Fate Systems, LLC. Countdown Fate Systems, LLC does not transfer the title of Countdown to you; the license granted to
        you is not a sale. This agreement is a binding legal agreement between Countdown Fate Systems, LLC and the purchasers or users of Countdown.
    </string>
    <string name="countdown_text_2">If you do not agree to be bound by this agreement, remove Countdown from your computer now and,
        if applicable, promptly return to Countdown Fate Systems, LLC by mail any copies of Countdown and related documentation and packaging in your possession.
    </string>

    <string name="countdown_text_3">Countdown and the license herein
        granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or
        sub-licensed in whole or in part except that you may make one copy for archive purposes only.
        For information about redistribution of Countdown contact Countdown Fate Systems, LLC.
    </string>

    <string name="countdown_text_4">Your license to use Countdown is limited to the number of licenses purchased by you.
        You shall not allow others to use, copy or evaluate copies of Countdown.</string>

    <string name="countdown_text_5">You shall use Countdown in compliance with all applicable laws and not for any unlawful purpose.
        Without limiting the foregoing, use, display or distribution of Countdown together with material that is pornographic,
        racist, vulgar, obscene, defamatory, libelous, abusive, promoting hatred, discriminating or displaying prejudice based
        on religion, ethnic heritage, race, sexual orientation or age is strictly prohibited.
        Each licensed copy of Countdown may be used on one single computer location by one user. Use of
        Countdown means that you have loaded, installed, or run Countdown on a computer or similar device. If you install
        Countdown onto a multi-user platform, server or network, each and every individual user of Countdown must be licensed separately.
        You may make one copy of Countdown for backup purposes, providing you only have one copy installed on one computer being used by one person.
        Other users may not use your copy of Countdown. The assignment, sublicense, networking, sale, or distribution of copies of
        Countdown are strictly forbidden without the prior written consent of Countdown Fate Systems, LLC. It is a violation of this
        agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of Countdown. If any person other than
        yourself uses Countdown registered in your name, regardless of whether it is at the same time or different times, then this
        agreement is being violated and you are responsible for that violation!
    </string>

    <string name="countdown_text_6">This Software contains copyrighted material, trade secrets and other proprietary material.
        You shall not, and shall not attempt to, modify, reverse engineer, disassemble or decompile Countdown.
        Nor can you create any derivative works or other works that are based upon or derived from Countdown in whole or in part.
        Countdown Fate Systems, LLC\'s name, logo and graphics file that represents Countdown shall not be used in any way to promote products developed
        with Countdown. Countdown Fate Systems, LLC retains sole and exclusive ownership of all right,
        title and interest in and to Countdown and all Intellectual Property rights relating thereto. Copyright law and international copyright treaty provisions
        protect all parts of Countdown, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the
        user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for Countdown Fate Systems, LLC.
    </string>

    <string name="countdown_text_7">You will indemnify, hold harmless, and defend
        Countdown Fate Systems, LLC , its employees, agents and distributors against any and all claims, proceedings,
        demand and costs resulting from or in any way connected with your use of Countdown Fate Systems, LLC\'s Software.
        In no event (including, without limitation, in the event of negligence) will Countdown Fate Systems, LLC ,
        its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive
        damages whatsoever (including, without limitation, indemnify, hold harmless, and defend Countdown Fate Systems, LLC, its employees,
        agents and distributors against any and all claims, proceedings, demand and costs resulting from or in any way connected with your use of Countdown Fate
        Systems, LLC\'s Software. In no event (including, without limitation, in the event of negligence) will Countdown Fate Systems, LLC, its employees,
        agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever
        (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss),
        in connection with or arising out of or related to this Agreement, Countdown or the use or inability to use Countdown or the furnishing,
        performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.
        Countdown Fate Systems, LLC\'s entire liability, without exception, is limited to the customers\' reimbursement of the purchase price of the Software
        (maximum being the lesser of the amount paid by you and the suggested retail price as listed by Countdown Fate Systems, LLC ) in exchange for the
        return of the product, all copies, registration papers and manuals, and all materials that constitute a transfer of license from the customer
        back to Countdown Fate Systems, LLC.
    </string>

    <string name="accept_and_continue">ACCEPT AND CONTINUE</string>
    <string name="color_match" translatable="false">Color Match</string>
    <string name="jump_up" translatable="false">Jump Up</string>
    <string name="christmas_game">Christmas game</string>
    <string name="barley_break">Barley-Break</string>
    <string name="christmas_tree">Christmas Tree (Widget)</string>
    <string name="user_agreement_broken">USER AGREEMENT BROKEN</string>
    <string name="later">Later</string>
    <string name="of_course">Of course</string>
    <string name="rating_text">Want to rate the app?</string>
    <string name="shopping_calculator">Shopping Calculator</string>
    <string name="share_text_1">I have to live</string>
    <string name="share_text_2">How much is left for you? Check it out!</string>
    <string name="our_apps">Our apps</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
</resources>
