<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_copyright"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_text_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_text_1"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_text_2"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_text_2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_text_3"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_text_3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_text_4"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_text_4"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_text_5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_text_5"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_text_6"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_text_6"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_text_7"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countdown_text_7"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/accept_and_continue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/accept_and_continue"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@drawable/accept_button"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>