<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:weightSum="1" >

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:padding="0dp"
        android:layout_weight="0.02">

        <TextView
            android:id="@+id/titleDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="0dp" >

        <TextView
            android:id="@+id/messageDialog"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/rating_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_below="@+id/messageDialog"
            android:layout_marginBottom="20dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/white"
        android:layout_weight="0.01">

        <Button
            android:id="@+id/dialogButtonNo"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/later"
            android:textStyle="bold"
            android:background="@color/grey"
            android:textColor="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"/>

        <Button
            android:id="@+id/dialogButtonYes"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/of_course"
            android:textStyle="bold"
            android:background="@color/grey"
            android:textColor="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"/>

    </RelativeLayout>

</LinearLayout>