<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/relative_layout_ads">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/yrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingStart="0dp"
        android:text="00"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="88sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-195dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingStart="0dp"
        android:text="000"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="88sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/yrs"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingStart="0dp"
        android:text="00"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="88sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingStart="0dp"
        android:text="00"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="88sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingStart="0dp"
        android:text="00"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="88sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_yrs"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="monospace"
        android:paddingBottom="20dp"
        android:text="@string/text_yrs3"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/yrs"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_day"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:fontFamily="monospace"
        android:paddingBottom="20dp"
        android:text="@string/text_day3"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_hrs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_hrs"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="monospace"
        android:paddingBottom="20dp"
        android:text="@string/text_hrs3"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/hrs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_yrs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_min"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="monospace"
        android:paddingBottom="20dp"
        android:text="@string/text_min3"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_day" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_sec"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="monospace"
        android:paddingBottom="20dp"
        android:text="@string/text_sec3"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_min" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/relative_layout_ads"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp">

        <ImageView
            android:id="@+id/more_apps_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="4dp"
            android:src="@drawable/more_apps" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/relative_layout_ads">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-7528412641056592/1279020324">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</RelativeLayout>